--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/Assets/css/reset.css">
-    
+    <link rel="stylesheet" href="../Word-guess-Game/Assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Assets/css/styles.css">
+    <link rel="stylesheet" href="../Word-guess-Game/Assets/css/styles.css">
     <title>HangMan Game</title>
     
 </head>
@@ -15,10 +14,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 ">
-                <img id="hangman" src="/Assets/images/homer-hangman.jpg" alt="hangman">
+                <img id="hangman" src="../Word-guess-Game/Assets/images/homer-hangman.jpg" alt="hangman">
             </div>
             <div class="col-md-6 ">
-                <img id="soccer" src="/Assets/images/trick-or-treat.jpg" alt="trick-or-treat">
+                <img id="trickOrTreat" src="../Word-guess-Game/Assets/images/trick-or-treat.jpg" alt="trick-or-treat">
             </div>
         </div>
 
@@ -78,12 +77,12 @@
                     <div class="row">
                         <div class="col-md-12 audio">
                             <!-- tried to play music when user wins -->
-                            <audio src="/Assets/images/monster_mash.mp3"></audio>
+                            <!-- <audio src="/Assets/images/monster_mash.mp3"></audio> -->
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 picture">
-                            <img src="/Assets/images/monster mash.gif" alt="monsterMash">
+                            <img src="../Word-guess-Game/Assets/images/monster mash.gif" alt="monsterMash">
                         </div>
                     </div>
                     <div id="endGame"></div>
@@ -96,7 +95,7 @@
 
     </div>
 
-    <script src="/Assets/Javascript/game.js" type="text/javascript"></script>
+    <script src="../Word-guess-Game/Assets/Javascript/game.js" type="text/javascript"></script>
 
 </body>
 </html>
